Changes Several things. Optimized the Core class Added a Modded version of FallingBlockEntity.java Re Orginized the File Structure of Folders and java Classes.

--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@ apply plugin: 'org.parchmentmc.librarian.forgegradle'
 
 
 group = 'me.mangorage'
-version = '1.18.2-1.0.0-beta6'
+version = "${mc_version}-${nethermelt_version}"
 
 java {
     archivesBaseName = 'nethermeltmod'
@@ -36,7 +36,7 @@ minecraft {
     // Use non-default mappings at your own risk. They may not always work.
     // Simply re-run your setup task after changing the mappings to update your workspace.
     // mappings channel: 'official', version: '1.18.2'
-    mappings channel: 'parchment', version: '2022.06.05-1.18.2'
+    mappings channel: "${mapping_type}", version: "${mapping_version}"
 
     // accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
 
@@ -57,6 +57,7 @@ minecraft {
             // You can set various levels here.
             // Please read: https://stackoverflow.com/questions/2031163/when-to-use-the-different-log-levels
             property 'forge.logging.console.level', 'debug'
+            args '--username', 'CrazyMangoRage'
 
             mods {
                 foamblock {
@@ -80,10 +81,10 @@ minecraft {
             // Please read: https://stackoverflow.com/questions/2031163/when-to-use-the-different-log-levels
             property 'forge.logging.console.level', 'debug'
 
-
-
             mods {
-
+                foamblock {
+                    source sourceSets.main
+                }
             }
         }
 
@@ -132,6 +133,15 @@ repositories {
             includeGroup "curse.maven"
         }
     }
+    maven { // TOP
+        url "https://maven.k-4u.nl"
+    }
+
+    maven {
+        // location of the maven that hosts JEI files
+        name = "Progwml6 maven"
+        url = "https://dvs1.progwml6.com/files/maven/"
+    }
 
 }
 
@@ -139,7 +149,7 @@ dependencies {
     // Specify the version of Minecraft to use. If this is any group other than 'net.minecraft' it is assumed
     // that the dep is a ForgeGradle 'patcher' dependency, and its patches will be applied.
     // The userdev artifact is a special name and will get all sorts of transformations applied to it.
-    minecraft 'net.minecraftforge:forge:1.18.2-40.1.23'
+    minecraft "net.minecraftforge:forge:${mc_version}-${forge_version}"
 
     // Real mod deobf dependency examples - these get remapped to your current mappings
     // compileOnly fg.deobf("mezz.jei:jei-${mc_version}:${jei_version}:api") // Adds JEI API as a compile dependency
@@ -152,6 +162,9 @@ dependencies {
     // For more info...
     // http://www.gradle.org/docs/current/userguide/artifact_dependencies_tutorial.html
     // http://www.gradle.org/docs/current/userguide/dependency_management.html
+
+    compileOnly fg.deobf("mezz.jei:jei-${mc_version}:${jei_version}:api")
+    compileOnly "mcjty.theoneprobe:theoneprobe:${top_version}"
 
     runtimeOnly fg.deobf("curse.maven:jei-238222:3788739")
     runtimeOnly fg.deobf("curse.maven:the-one-probe-245211:3671753")
