--- a/gradle.properties
+++ b/gradle.properties
@@ -1,2 +1,13 @@
 org.gradle.jvmargs=-Xmx5G
 org.gradle.daemon=false
+
+nethermelt_version=1.0.0-beta8
+
+mc_version=1.18.2
+forge_version=40.1.52
+
+mapping_type=parchment
+mapping_version=2022.06.19-1.18.2
+
+top_version=1.18-5.1.0-8
+jei_version=9.4.1.117
