--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 org.gradle.jvmargs=-Xmx5G
 org.gradle.daemon=false
 
-nethermelt_version=1.0.0-beta9
+nethermelt_version=0.1.0-beta
 
 mc_version=1.18.2
 forge_version=40.1.68
