--- a/build.gradle
+++ b/build.gradle
@@ -8,20 +8,18 @@ buildscript {
     dependencies {
         classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '5.1.+', changing: true
         classpath 'org.parchmentmc:librarian:1.+'
-        classpath 'org.spongepowered:mixingradle:0.7.+'
     }
 }
 
 apply plugin: 'net.minecraftforge.gradle'
 apply plugin: 'org.parchmentmc.librarian.forgegradle'
-apply plugin: 'org.spongepowered.mixin'
 
 
 group = 'me.mangorage'
 version = "${mc_version}-${nethermelt_version}"
 
 java {
-    archivesBaseName = 'nethermeltmod'
+    archivesBaseName = 'nethermelt'
     toolchain.languageVersion = JavaLanguageVersion.of(17)
 }
 
