--- a/gradle.properties
+++ b/gradle.properties
@@ -1,13 +1,13 @@
 org.gradle.jvmargs=-Xmx5G
 org.gradle.daemon=false
 
-nethermelt_version=0.1.0-beta
+nethermelt_version=0.1.2-beta
 
-mc_version=1.18.2
-forge_version=40.1.68
+mc_version=1.19.2
+forge_version=43.1.47
 
 mapping_type=parchment
-mapping_version=2022.06.19-1.18.2
+mapping_version=2022.10.16-1.19.2
 
-top_version=1.18-5.1.0-8
-jei_version=9.4.1.117
+top_version=1.19-6.2.1
+jei_version=11.2.0.247
